--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.23.3",
-    "@babel/plugin-transform-modules-commonjs": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
     "@jest/globals": "^29.7.0",
+    "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^28.0.1",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@testing-library/jest-dom": "^6.1.4",
